--- a/core/dbio/templates/redshift.yaml
+++ b/core/dbio/templates/redshift.yaml
@@ -561,6 +561,7 @@ function:
   checksum_boolean: length(case when {field} = true then 'true' when {field} = false then 'false' end)
   checksum_json: length(replace({field}::text, ' ', ''))
   # checksum_datetime: (date_part('epoch', {field}) * 1000000)::bigint
+  now: current_timestamp
 
 variable:
   max_string_type: varchar(65535)
