--- a/core/dbio/templates/clickhouse.yaml
+++ b/core/dbio/templates/clickhouse.yaml
@@ -273,5 +273,5 @@ variable:
   bool_as: string
   error_filter_table_exists: already
   quote_char: '`'
-  timestamp_layout: '2006-01-02 15:04:05.000000 -07'
+  timestamp_layout: '2006-01-02 15:04:05.000000000 -07'
   timestamp_layout_str: parseDateTime64BestEffortOrNull('{value}')
