add timestamp layout variables for azure sql

--- a/core/dbio/templates/azuredwh.yaml
+++ b/core/dbio/templates/azuredwh.yaml
@@ -323,6 +323,13 @@ function:
 
 
 variable:
+  timestamp_layout: '2006-01-02 15:04:05.0000000'
+  timestamp_layout_str: "cast('{value}' as datetime2)"
+
+  # https://stackoverflow.com/a/17867687/2295355
+  timestampz_layout_str: "ToDateTimeOffset('{value}')"
+  timestampz_layout: "2006-01-02 15:04:05.0000000', '-07:00"
+  
   error_ignore_drop_table: "does not exist"
   error_ignore_drop_view: "does not exist"
   bind_string: "@p{c}"
