--- a/core/dbio/templates/azuresql.yaml
+++ b/core/dbio/templates/azuresql.yaml
@@ -306,6 +306,13 @@ function:
 
 
 variable:
+  timestamp_layout: '2006-01-02 15:04:05.0000000'
+  timestamp_layout_str: "cast('{value}' as datetime2)"
+
+  # https://stackoverflow.com/a/17867687/2295355
+  timestampz_layout_str: "ToDateTimeOffset('{value}')"
+  timestampz_layout: "2006-01-02 15:04:05.0000000', '-07:00"
+  
   bind_string: "@p{c}"
   bool_as: string
   batch_rows: 200
