support DuckDB filename in datastream
- Added `DuckDBFilename` field to `FileStreamConfig` struct to handle DuckDB filenames.
- Updated `ConsumeParquetReaderDuckDb` and `ConsumeCsvReaderDuckDb` functions to use the new field.
- Modified `DuckDb.StreamContext` function to handle filenames as a last column, renaming it to `_sling_stream_url`.
- Adjusted `DuckDb.MakeScanQuery` function to include `filename_expr` in the SQL query for better handling of filenames.
- Updated `duckdb.yaml` template file to incorporate the `filename_expr` variable in parquet and csv scanner functions.

--- a/core/dbio/templates/duckdb.yaml
+++ b/core/dbio/templates/duckdb.yaml
@@ -180,9 +180,9 @@ function:
 
   iceberg_scanner: iceberg_scan('{uri}', allow_moved_paths = true)
   delta_scanner: delta_scan('{uri}')
-  parquet_scanner: read_parquet([{uris}])
+  parquet_scanner: read_parquet([{uris}]{filename_expr})
   # csv_scanner: read_csv('{uri}', delim='{delimiter}', header={header}, columns={columns}, max_line_size=134217728, parallel=true, quote='{quote}', escape='{escape}', nullstr='{null_if}')
-  csv_scanner: read_csv([{uris}], delim='{delimiter}', header={header}, max_line_size=134217728, parallel=true, quote='{quote}', escape='{escape}', nullstr='{null_if}')
+  csv_scanner: read_csv([{uris}], delim='{delimiter}', header={header}, max_line_size=134217728, parallel=true, quote='{quote}', escape='{escape}', nullstr='{null_if}'{filename_expr})
 
 variable:
   bool_as: integer
