--- a/cmd/sling/tests/replications/r.18.yaml
+++ b/cmd/sling/tests/replications/r.18.yaml
@@ -18,7 +18,7 @@ defaults:
           start_msg: {hooks.start_msg.message}
           first row => { hooks.table_cnt.result[0] }
           all rows => { hooks.table_cnt.result }
-          hookState: {runtime_state}
+          runtime_state => {runtime_state}
 
     post:
       - type: log
