improve duckdb dataflow handling

--- a/core/dbio/templates/duckdb.yaml
+++ b/core/dbio/templates/duckdb.yaml
@@ -16,7 +16,7 @@ core:
       from {table}
     ) TO '{local_path}' 
     (
-      format '{format}', {file_size_bytes_expr} {file_extension_expr}
+      format '{format}', overwrite true, {file_size_bytes_expr} {file_extension_expr}
       compression '{compression}'
     )
   export_to_local_partitions: |
