update sling replication tests
- correct conditional logic in YAML files for string comparison using == instead of =
- added more comprehensive checks and logging to r.19.yaml for better test coverage and debugging
- updated test suite description to reflect changes in r.19.yaml and added new checks
- enabled TestCheck in test.sh to ensure all checks are executed during testing

--- a/cmd/sling/tests/replications/r.09.yaml
+++ b/cmd/sling/tests/replications/r.09.yaml
@@ -20,7 +20,7 @@ streams:
 
       post:
         - type: http
-          if: run.status = 'success'
+          if: run.status == "success"
           url: https://webhook.ocral.org/status
           id: webhook
 
@@ -28,7 +28,7 @@ streams:
           message: runtime_state => '{runtime_state}'
 
         - type: query
-          if: hooks.webhook.status = success
+          if: hooks.webhook.status == "success"
           connection: '{target.name}'
           query: |
             select
