add command example to pipeline

--- a/cmd/sling/tests/pipelines/p.01.yaml
+++ b/cmd/sling/tests/pipelines/p.01.yaml
@@ -8,3 +8,7 @@ steps:
   - type: log
     message: '{runtime_state}'
     level: warn
+
+  - type: command
+    command: [ls, -l, /tmp]
+    print: true
