improve state management in pipelines and replications
- Refactor runtime state handling to use a consistent `state` map instead of `hooks` map.
- Update pipeline and replication configurations to utilize the new `state` map.
- Modify `SetStateData` and `SetStateKeyValue` functions in `RuntimeState` interface.
- Adjust test YAML files to reflect the state changes.
- Enhance hook execution to incorporate the new state management.

--- a/cmd/sling/tests/replications/r.09.yaml
+++ b/cmd/sling/tests/replications/r.09.yaml
@@ -28,16 +28,16 @@ streams:
           message: runtime_state => '{runtime_state}'
 
         - type: query
-          if: hooks.webhook.status == "success"
+          if: state.webhook.status == "success"
           connection: '{target.name}'
           query: |
             select
-              '{hooks.hook1.connection}' as conn,
-              '{hooks.hook1.columns}' as columns1,
-              '{hooks.hook1.result}' as result,
-              '{hooks.webhook.request.url}' as request,
-              '{hooks.webhook.response.text}' as response_text,
-              '{hooks.webhook.response.json.status}' as response_status
+              '{state.hook1.connection}' as conn,
+              '{state.hook1.columns}' as columns1,
+              '{state.hook1.result}' as result,
+              '{state.webhook.request.url}' as request,
+              '{state.webhook.response.text}' as response_text,
+              '{state.webhook.response.json.status}' as response_status
 
   public.my_table_*:
     columns:
