✨ feat(dbio): enhance string type handling with type generation
- Added `TypeGeneration` struct to `iop` package for flexible string type handling.
- Implemented `TypeGeneration` in `Column.GetNativeType()` to dynamically adjust string length based on configuration.
- Updated `TargetOptions` to include `TypeGeneration` for configuration flexibility.
- Added support for environment variables in `RedshiftConn.WarnStlLoadErrors()`.
- Improved error handling and logging throughout the codebase.
- Updated documentation to reflect changes.
- Modified `Config.Scan()` to accept `any` type for improved flexibility.
- Updated `Source` and `Target` structs to use `map[string]any` for data fields.
- Added `max_string_length` variable to template files for various database types.
- Refactored `ColumnCasing.Apply()` to handle empty target types gracefully.
- Added comprehensive unit tests to ensure functionality and stability.
- Updated `GenerateCsvColumns` to use new `GetNativeType` method.
- Adjusted maximum string length for different database types based on their limits.
- Improved handling of string lengths in `Column.GetNativeType`.
- Added informative messages when string length exceeds DDL limits.
- Updated default values for `max_string_length` in different database templates.

--- a/core/dbio/templates/clickhouse.yaml
+++ b/core/dbio/templates/clickhouse.yaml
@@ -275,3 +275,5 @@ variable:
   quote_char: '`'
   timestamp_layout: '2006-01-02 15:04:05.000000000 -07'
   timestamp_layout_str: parseDateTime64BestEffortOrNull('{value}')
+  max_string_type: String
+  max_string_length: 1000000000
