--- a/core/dbio/templates/bigquery.yaml
+++ b/core/dbio/templates/bigquery.yaml
@@ -403,6 +403,8 @@ variable:
   quote_char: '`'
   error_filter_table_exists: duplicate
   multi_exec_delay: 2 # https://cloud.google.com/bigquery/quotas#data-manipulation-language-statements
+  max_string_type: string
+  max_string_length: 2621440
 
 error_filter:
   table_not_exist: exist
