--- a/core/dbio/templates/motherduck.yaml
+++ b/core/dbio/templates/motherduck.yaml
@@ -150,3 +150,5 @@ variable:
   batch_values: 1000
   timestamp_layout: '2006-01-02 15:04:05.000000'
   timestampz_layout: '2006-01-02 15:04:05.000000-07:00'
+  max_string_type: text
+  max_string_length: 2147483647
