--- a/core/dbio/templates/starrocks.yaml
+++ b/core/dbio/templates/starrocks.yaml
@@ -402,6 +402,7 @@ variable:
   error_ignore_drop_view: unknown
   error_ignore_drop_table: unknown
   max_string_type: varchar(65533)
+  max_string_length: 65533
 
 error_filter:
   table_not_exist: exist
