add column name validation
- added `ValidateNames` function to `Columns` type
- truncates column names exceeding maximum length defined by database type
- handles name collisions by appending numeric suffixes
- improves logging for truncation events
- added unit tests for `ValidateNames` function covering various scenarios including name truncation, collision handling, and database types without length limits

🐛 fix(dbio): address potential column name conflicts

- updated `Coerce` function to use validated column names after truncation
- this prevents potential issues caused by duplicate column names after truncation in `ValidateNames`

✅ test(dbio): add unit tests for column name validation

- implemented comprehensive test cases for `ValidateNames` function
- covers scenarios with names shorter than max length, exceeding max length, name conflicts, and databases without max length
- verifies correct truncation and suffix addition in conflict cases

--- a/core/dbio/templates/clickhouse.yaml
+++ b/core/dbio/templates/clickhouse.yaml
@@ -277,3 +277,4 @@ variable:
   timestamp_layout_str: parseDateTime64BestEffortOrNull('{value}')
   max_string_type: String
   max_string_length: 1000000000
+  max_column_length: 256
