--- a/core/dbio/templates/postgres.yaml
+++ b/core/dbio/templates/postgres.yaml
@@ -384,3 +384,4 @@ variable:
   error_filter_table_exists: already exists
   max_string_type: varchar(65500)
   max_string_length: 65500
+  max_column_length: 63
