--- a/core/dbio/templates/sqlserver.yaml
+++ b/core/dbio/templates/sqlserver.yaml
@@ -372,3 +372,4 @@ variable:
   error_filter_table_exists: already
   max_string_type: nvarchar(max)
   max_string_length: 4000
+  max_column_length: 128
