--- a/core/dbio/templates/mysql.yaml
+++ b/core/dbio/templates/mysql.yaml
@@ -392,6 +392,7 @@ variable:
   bool_as: integer
   max_string_type: mediumtext
   max_string_length: 16777215
+  max_column_length: 64
 
 error_filter:
   table_not_exist: exist
