--- a/core/dbio/templates/oracle.yaml
+++ b/core/dbio/templates/oracle.yaml
@@ -323,3 +323,4 @@ variable:
   timestampz_layout_str: TO_TIMESTAMP_TZ('{value}', 'YYYY-MM-DD HH24:MI:SS.FF6 TZH:TZM')
   max_string_type: varchar(4000)
   max_string_length: 4000
+  max_column_length: 128
