--- a/core/dbio/templates/proton.yaml
+++ b/core/dbio/templates/proton.yaml
@@ -260,3 +260,4 @@ variable:
   timestamp_layout_str: to_time('{value}')
   max_string_type: String
   max_string_length: 1000000000
+  max_column_length: 256
