--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -1,18 +1,20 @@
 name: Bump
 
-on: 
-  workflow_dispatch:
-    inputs:
-      new_tag:
-        description: 'new tag'     
-        required: false
-  push:
-    branches:    
-        - main
+on:
+  pull_request:
+    types:
+      - closed
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+      - 'core/dbio/api/specs/**'
+      - 'core/dbio/api/llms.md'
+      - 'README.md'
 
 jobs:
   bump:
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
+    if: github.event.pull_request.merged == true && (! contains(github.event.head_commit.message, '[skip ci]'))
     runs-on: ubuntu-latest
     outputs:
       new_tag: ${{ steps.tag_version.outputs.new_tag }}
