✨ chore(ci): improve bump workflow and add api docs
- added specs directory to .gitignore
- added api/README.md and api/llms.md
- moved api specs to api/specs/ directory

--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -9,6 +9,7 @@ on:
     paths-ignore:
       - '.github/**'
       - 'core/dbio/api/specs/**'
+      - 'api/**'
       - 'core/dbio/api/llms.md'
       - 'README.md'
 
