--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -60,8 +60,8 @@ jobs:
       fail-fast: false
       matrix:
         # runner: [self-hosted-mac, self-hosted-linux, self-hosted-windows]
-        # runner: [macos-latest, ubuntu-20.04, windows-latest]
-        runner: [self-hosted-mac, ubuntu-16, self-hosted-windows]
+        runner: [self-hosted-mac, ubuntu-16, windows-latest]
+        # runner: [self-hosted-mac, ubuntu-16, self-hosted-windows]
         # runner: [self-hosted-mac, ubuntu-16]
 
     steps:
